[package]
name = "memalloc"
version = "0.1.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
default-features = false
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]
